--- a/styles.css
+++ b/styles.css
@@ -74,9 +74,11 @@ body {
     .card {
       grid-template-columns: 1fr;
     }
-    h1{
-        display: none;
-    }
+    h1 {
+      display: block; 
+      font-size: 30px; 
+      margin-top: 5%;
+     }
   }
 .primScreen,
 .resScreen {
@@ -92,7 +94,7 @@ body {
 .resScreen div {
   margin-bottom: 5%;
 }
-label{
+label,p{
     font-family: Hind, sans-serif;
     text-align: center;
     font-size: 20px;
@@ -104,7 +106,7 @@ label{
     border-width: 1px;
     border-color: #150032;
     background-color: rgba(0, 0, 75, 0.4);
-    color: #000000;
+    color: #d8d8d8;
     border-style: solid;
     border-radius: 9px;
     box-shadow: 0px 0px 20px rgba(66,66,66,.40);
@@ -152,4 +154,29 @@ label{
     rgb(6, 0, 85) 94.3%
   );
   transition: all 0.475s;
+}
+footer {
+  background-color: rgba(3, 3, 22, 0.157);
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.social-icons a {
+  margin-right: 10px;
+}
+
+.social-icons i {
+  font-size: 24px;
+  color: blue;
 }
